2007-06-11  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* UI/Scheduler/UIxCalMonthView.m: no longer retrieve appointments.

	* UI/Scheduler/UIxCalView.m ([-fetchCoreAppointmentsInfos]):
	removed method.
	([-fetchCoreTasksInfos]): removed method.

	* UI/Scheduler/UIxCalListingActions.m ([UIxCalListingActions
	-init]): initialize an instance of SOGoDateFormatter.
	([UIxCalListingActions -eventsListAction]): the display start and
	end dates are added to the listing for each event.

	* UI/Scheduler/UIxCalDayTable.m: no longer retrieve appointments.

	* UI/Scheduler/UIxAppointmentEditor.m ([UIxAppointmentEditor
	-isAllDay]): returns YES if the "hm" url parameter is set to
	"allday".
	([UIxAppointmentEditor -defaultAction]): if isAllDay, the enddate
	is displayed one day earlier.

2007-06-07  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* UI/Scheduler/UIxCalListingActions.m ([UIxCalListingActions
	-_setupContext]): take the range of dates specified by the popup
	into account.

	* UI/Scheduler/UIxCalListingActions.[hm]: new subclass of
	WODirectAction that returns WOResponse objects with the events or
	todos satisfying the parameters passed in the url.

	* UI/Scheduler/UIxAppointmentEditor.m ([UIxAppointmentEditor
	-takeValuesFromRequest:_rqinContext:_ctx]): take the new ivar
	"isAllDay" into account and compute the amount of days to pass to
	the iCalEvent.

2007-06-06  Francis Lachapelle <flachapelle@inverse.ca>

	* SoObjects/SOGo/NSNumber+Utilities.m: initial import.
	* SoObjects/SOGo/NSNull+Utilities.m: initial import.
	* UI/Scheduler/UIxCalTasksListView.m ([WOResponse -tasksListAction]): 
	new method that returns a json-formatted array of the visible tasks
	for the current user.

2007-06-05  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* SoObjects/Appointments/SOGoAppointmentObject.m: the owner of the
	object must be present in the list of UIDs we delete the object
	from. Otherwise Calendar objects having no organizer and no